# smooth

./: .envrc  .gitignore  .gitmodules  .npmrc  .oxfmtrc.json  .oxlintrc.json  .prettierignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DESIGN.md  README.md  SECURITY.md  dprint.json  install.sh  laiebsnrkvrjkr1osdspejpn0ub9vmbh.darc  manifest  package.json  ph8koukbhcuos2sskmpfgkdic8c1tnon.darc  pnpm-lock.yaml  pnpm-workspace.yaml  syncpack.config.ts  tsconfig.json  turbo.json  vitest.config.mts
crates/smooth-archivist/: Cargo.toml  README.md
crates/smooth-archivist/src/: event_archive.rs  ingest.rs  lib.rs  server.rs  store.rs  stream.rs
crates/smooth-bench/: Cargo.toml  curated-tasks.toml
crates/smooth-bench/src/: agent_driver.rs  auto_approve.rs  chat_driver.rs  curated.rs  eval_html.rs  eval_report.rs  grade.rs  human_driver.rs  lang_detect.rs  lib.rs  main.rs  pr_harvest.rs  scenarios.rs  score.rs  score_cleanup.rs  score_real.rs  score_replay.rs  score_research.rs  score_swe_bench.rs  supervisor.rs  swe_bench_dataset.rs  sweep.rs  tmux_driver.rs  tui_score.rs
crates/smooth-bench/tasks-real/: README.md
crates/smooth-bench/tests/: score_integration.rs
crates/smooth-bigsmooth/: .archivist-diag.txt  Cargo.toml  build.rs  test_example.py
crates/smooth-bigsmooth/.smooth/: MEMORY.md
crates/smooth-bigsmooth/prompts/: narc_judge.md
crates/smooth-bigsmooth/src/: access.rs  audit.rs  beads.rs  boardroom.rs  boardroom_narc.rs  chat.rs  chat_tools.rs  chat_tools_system_prompt.txt  creds.rs  diver_client.rs  events.rs  grpc.rs  host_tools.rs  issues.rs  jira.rs  lib.rs  narc_grpc.rs  operative_client.rs  operator_client.rs  orchestrator.rs  orchestrator_grpc.rs  pearls.rs  policy.rs  pool.rs  port_cache.rs  safehouse.rs  safehouse_narc.rs  sandbox.rs  search.rs  server.rs  session.rs  single_process.rs  tailscale.rs  teammates.rs  thoughts.rs  tonic_clients.rs  tool_api.rs  tools.rs  web_search.rs  wonk_grants.rs  (+1 more)
crates/smooth-bigsmooth/tests/: access_routes.rs  boardroom_e2e.rs  cast_integration.rs  creds_route.rs  full_stack_e2e.rs  headless_e2e.rs  integration.rs  narc_escalation.rs  playwright_e2e.rs  safehouse_e2e.rs  sandbox_security.rs  sandboxed_dispatch.rs  single_process_smoke.rs  web_search_route.rs  wonk_grants_persistence.rs
crates/smooth-bootstrap-bill/: Cargo.toml  README.md
crates/smooth-bootstrap-bill/examples/: bisect_spawn.rs
crates/smooth-bootstrap-bill/src/: client.rs  lib.rs  project_cache.rs  protocol.rs  server.rs
crates/smooth-cast/: Cargo.toml
crates/smooth-cast/src/: cast.rs  coding_workflow.rs  lib.rs  provider_migration.rs
crates/smooth-cli/: Cargo.toml  build.rs
crates/smooth-cli/prompts/: prime.md
crates/smooth-cli/src/: active_org.rs  boot_ui.rs  config.rs  daemon_launcher.rs  gradient.rs  hooks.rs  main.rs  mcp_config.rs  service.rs  smooai.rs  tailscale.rs  vm.rs
crates/smooth-code/: Cargo.toml
crates/smooth-code/src/: ansi.rs  app.rs  auto_mode.rs  autocomplete.rs  big_smooth.rs  client.rs  commands.rs  diff_render.rs  extensions.rs  files.rs  git.rs  headless.rs  inline.rs  intent.rs  lib.rs  markdown.rs  model_picker.rs  modes.rs  operator_client.rs  permissions.rs  render.rs  session.rs  state.rs  theme.rs  thesaurus.rs  tool_diff.rs  tools.rs
crates/smooth-code/tests/: auto_mode_e2e.rs
crates/smooth-credential-helper/: Cargo.toml
crates/smooth-credential-helper/src/: main.rs
crates/smooth-daemon/: Cargo.toml
crates/smooth-daemon/src/: approval.rs  config.rs  coordinator.rs  event.rs  hook.rs  lib.rs  main.rs  messages.rs  operator.rs  operator_storage.rs  permission.rs  push.rs  runner.rs  schedule.rs  scheduler.rs  search.rs  server.rs  session.rs  sqlite.rs  tailscale.rs  wire.rs
crates/smooth-daemon/tests/: live_operator_e2e.rs
crates/smooth-diver/: Cargo.toml  README.md
crates/smooth-diver/src/: jira.rs  lib.rs  server.rs  store.rs
crates/smooth-diver/tests/: diver_e2e.rs
crates/smooth-goalie/: Cargo.toml  README.md
crates/smooth-goalie/src/: allowlist.rs  audit.rs  lib.rs  main.rs  proxy.rs  wonk.rs
crates/smooth-host-stub/: Cargo.toml  README.md  build.rs
crates/smooth-host-stub/src/: backend.rs  docker_socket.rs  lib.rs  registry.rs  server.rs
crates/smooth-issues/: Cargo.toml
crates/smooth-issues/src/: lib.rs  query.rs  store.rs  tools.rs  types.rs
crates/smooth-narc/: Cargo.toml  README.md  build.rs
crates/smooth-narc/examples/: judge_spot_check.rs
crates/smooth-narc/src/: access_wire.rs  alert.rs  convert.rs  detectors.rs  grpc.rs  hook.rs  judge.rs  lib.rs
crates/smooth-operator/: Cargo.toml
crates/smooth-operator-runner/: Cargo.toml
crates/smooth-operator-runner/prompts/: system.md
crates/smooth-operator-runner/src/: ask_smooth_tool.rs  bg_process.rs  forgiving_parse.rs  host_tool.rs  lsp.rs  mailbox.rs  main.rs  mcp.rs  pearl_tools.rs  plugins.rs  port_forward.rs  provider_overlay.rs  tool_hints.rs  tool_support.rs
crates/smooth-operator-runner/tests/: agent_permissions.rs  stdout_no_runner_prefix.rs  subagent_dispatch.rs
crates/smooth-operator/src/: agent.rs  bigsmooth_client.rs  checkpoint.rs  coding_workflow.rs  context.rs  conversation.rs  cost.rs  lib.rs  llm.rs  memory.rs  providers.rs  resolution.rs  skills.rs  tool.rs  tool_search.rs  ws_resilience.rs
crates/smooth-operator/tests/: golden_e2e.rs
crates/smooth-pearls/: Cargo.toml  README.md  build.rs
crates/smooth-pearls/examples/: auto_register_cross_process_writer.rs
crates/smooth-pearls/src/: agents.rs  dolt.rs  dolt_server.rs  lib.rs  memory.rs  memory_tools.rs  messaging.rs  query.rs  registry.rs  store.rs  tools.rs  types.rs
crates/smooth-plugin/: Cargo.toml  README.md
crates/smooth-plugin/src/: command.rs  lib.rs  plugin.rs  registry.rs
crates/smooth-policy/: Cargo.toml  README.md
crates/smooth-scribe/: Cargo.toml  README.md  build.rs
crates/smooth-tmux/: Cargo.toml
crates/smooth-tools/: Cargo.toml
crates/smooth-tui/: Cargo.toml
crates/smooth-tunnel/: Cargo.toml
crates/smooth-web/: Cargo.toml  build.rs
crates/smooth-wonk/: Cargo.toml  README.md  build.rs
(+1157 files in other folders)
