[workspace]
resolver = "2"
members = ["crates/*"]
exclude = ["crates/smooth-bigsmooth/tests/fixtures"]

[workspace.package]
version = "0.12.6"
edition = "2021"
license = "MIT"
repository = "https://github.com/SmooAI/smooth"

[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
module_name_repetitions = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
doc_markdown = "allow"
significant_drop_tightening = "allow"
missing_const_for_fn = "allow"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server
axum = "0.8"
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }

# Database — pinned to 0.32 so `libsqlite3-sys 0.30` is the single version in
# the tree. `microsandbox` (via sea-orm → sqlx → libsqlite3-sys 0.30) and
# `rusqlite` both link the `sqlite3` native library, so their versions must
# unify. rusqlite 0.32 uses the same APIs we care about (Connection, params!,
# query, prepare, Row, types::ToSql).
rusqlite = { version = "0.32", features = ["bundled"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# TUI
ratatui = "0.30"
crossterm = "0.29"

# Markdown
pulldown-cmark = "0.13"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client
# Use rustls-tls-webpki-roots so the crate ships its own CA bundle (no system
# certs needed). This is critical for smooth-operator-runner running inside
# alpine microVMs which don't have ca-certificates installed by default.
#
# `hickory-dns` enables a pure-Rust DNS resolver instead of getaddrinfo. This
# is critical for the in-VM runner because alpine's musl getaddrinfo has been
# observed to return EAI_AGAIN against microsandbox's intercepted DNS — the
# pure-Rust hickory resolver reads /etc/resolv.conf and sends UDP queries
# directly, which the microsandbox DNS interceptor handles correctly.
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls-webpki-roots", "charset", "http2", "hickory-dns"] }

# File search
globwalk = "0.9"
ignore = "0.4"

# In-process ripgrep — the library crates behind `rg`. Powers the native
# GrepTool so the agent can search code without shelling out.
grep-regex = "0.1"
grep-searcher = "0.1"

# Fuzzy matching (nucleo — used by Helix/Zed editors). Powers "did you
# mean?" suggestions when the agent misspells a file path.
nucleo-matcher = "0.3"

# Diff generation + patch application. `similar` generates unified diffs
# for tool result metadata; `patch` parses and applies unified .patch
# files for the apply_patch tool.
similar = "2"

# LSP client types — JSON-RPC message structures for communicating with
# language servers (rust-analyzer, typescript-language-server, pyright).
lsp-types = "0.97"

# Model Context Protocol SDK — the official Rust MCP client/server
# library. We use it client-side to spawn user-configured MCP servers
# (Playwright, GitHub, etc.) as subprocesses and bridge their tools
# into the runner's ToolRegistry.
rmcp = { version = "1.4", features = ["client", "transport-child-process"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Misc
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
futures-core = "0.3"
futures-util = "0.3"
anyhow = "1"
thiserror = "2"
dirs-next = "2"
urlencoding = "2"
tempfile = "3"

# Embed web assets
rust-embed = "8"

# TOML + glob
toml = "0.8"
globset = "0.4"

# Proxy
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
bytes = "1"

# Hot-reload
notify = { version = "8", default-features = false, features = ["macos_kqueue"] }
arc-swap = "1"

# Colors
owo-colors = "4"

# TTY detection
atty = "0.2"

# Async streams
async-trait = "0.1"
tokio-stream = "0.1"
pin-project-lite = "0.2"

# WebSocket client
tokio-tungstenite = "0.26"

# Microsandbox — hardware-isolated microVM runtime for Smooth Operators.
# Used directly via the Rust SDK so we do not need the external `msb` CLI.
microsandbox = "0.3"

# Workspace crates
smooth-operator = { path = "crates/smooth-operator", version = "0.12.6", package = "smooai-smooth-operator" }
smooth-bigsmooth = { version = "0.12.6", path = "crates/smooth-bigsmooth", package = "smooai-smooth-bigsmooth" }
smooth-policy = { path = "crates/smooth-policy", version = "0.12.6", package = "smooai-smooth-policy" }
smooth-web = { version = "0.12.6", path = "crates/smooth-web", package = "smooai-smooth-web" }
smooth-scribe = { version = "0.12.6", path = "crates/smooth-scribe", package = "smooai-smooth-scribe" }
smooth-wonk = { version = "0.12.6", path = "crates/smooth-wonk", package = "smooai-smooth-wonk" }
smooth-goalie = { version = "0.12.6", path = "crates/smooth-goalie", package = "smooai-smooth-goalie" }
smooth-narc = { version = "0.12.6", path = "crates/smooth-narc", package = "smooai-smooth-narc" }
smooth-archivist = { version = "0.12.6", path = "crates/smooth-archivist", package = "smooai-smooth-archivist" }
smooth-plugin = { version = "0.12.6", path = "crates/smooth-plugin", package = "smooai-smooth-plugin" }
smooth-code = { version = "0.12.6", path = "crates/smooth-code", package = "smooai-smooth-code" }
smooth-pearls = { path = "crates/smooth-pearls", version = "0.12.6", package = "smooai-smooth-pearls" }
smooth-diver = { version = "0.12.6", path = "crates/smooth-diver", package = "smooai-smooth-diver" }
smooth-bootstrap-bill = { version = "0.12.6", path = "crates/smooth-bootstrap-bill", default-features = false, package = "smooai-smooth-bootstrap-bill" }
smooth-tunnel = { version = "0.12.6", path = "crates/smooth-tunnel", package = "smooai-smooth-tunnel" }
smooth-bench = { version = "0.12.6", path = "crates/smooth-bench", package = "smooai-smooth-bench" }
