[workspace]
resolver = "2"
members = ["crates/*"]
exclude = ["crates/smooth-bigsmooth/tests/fixtures"]

[workspace.package]
version = "0.15.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/SmooAI/smooth"

[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
module_name_repetitions = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
doc_markdown = "allow"
significant_drop_tightening = "allow"
missing_const_for_fn = "allow"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server
axum = "0.8"
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }

# Database — pinned to 0.32 so `libsqlite3-sys 0.30` is the single version in
# the tree. `microsandbox` (via sea-orm → sqlx → libsqlite3-sys 0.30) and
# `rusqlite` both link the `sqlite3` native library, so their versions must
# unify. rusqlite 0.32 uses the same APIs we care about (Connection, params!,
# query, prepare, Row, types::ToSql).
rusqlite = { version = "0.32", features = ["bundled"] }
# SMOODEV-1468: sync Postgres checkpoint store (smooth-operator `postgres` feature)
# + testcontainers-backed integration tests. Sync `postgres` crate (not async
# sqlx) because the CheckpointStore trait is synchronous, mirroring rusqlite.
postgres = "0.19"
r2d2 = "0.8"
r2d2_postgres = "0.18"
testcontainers = "0.24"
testcontainers-modules = { version = "0.12", features = ["postgres"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# TUI
ratatui = "0.30"
crossterm = "0.29"

# Markdown
pulldown-cmark = "0.13"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# YAML — used for skills/SKILL.md frontmatter parsing (pearl
# th-e0f812). serde_yml is the maintained fork of serde_yaml.
serde_yml = "0.0.12"

# HTTP client
# Use rustls-tls-webpki-roots so the crate ships its own CA bundle (no system
# certs needed). This is critical for smooth-operative running inside
# alpine microVMs which don't have ca-certificates installed by default.
#
# `hickory-dns` enables a pure-Rust DNS resolver instead of getaddrinfo. This
# is critical for the in-VM runner because alpine's musl getaddrinfo has been
# observed to return EAI_AGAIN against microsandbox's intercepted DNS — the
# pure-Rust hickory resolver reads /etc/resolv.conf and sends UDP queries
# directly, which the microsandbox DNS interceptor handles correctly.
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls-webpki-roots", "charset", "http2", "hickory-dns"] }

# File search
globwalk = "0.9"
ignore = "0.4"

# In-process ripgrep — the library crates behind `rg`. Powers the native
# GrepTool so the agent can search code without shelling out.
grep-regex = "0.1"
grep-searcher = "0.1"

# Fuzzy matching (nucleo — used by Helix/Zed editors). Powers "did you
# mean?" suggestions when the agent misspells a file path.
nucleo-matcher = "0.3"

# Diff generation + patch application. `similar` generates unified diffs
# for tool result metadata; `patch` parses and applies unified .patch
# files for the apply_patch tool.
similar = "2"

# LSP client types — JSON-RPC message structures for communicating with
# language servers (rust-analyzer, typescript-language-server, pyright).
lsp-types = "0.97"

# Model Context Protocol SDK — the official Rust MCP client/server
# library. We use it client-side to spawn user-configured MCP servers
# (Playwright, GitHub, etc.) as subprocesses and bridge their tools
# into the runner's ToolRegistry.
rmcp = { version = "1.4", features = ["client", "transport-child-process"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Misc
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
futures-core = "0.3"
futures-util = "0.3"
anyhow = "1"
thiserror = "2"
dirs-next = "2"
urlencoding = "2"
tempfile = "3"
fs4 = "0.13"

# Embed web assets
rust-embed = "8"

# TOML + glob
toml = "0.8"
globset = "0.4"

# Proxy
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
bytes = "1"

# Hot-reload
notify = { version = "8", default-features = false, features = ["macos_kqueue"] }
arc-swap = "1"

# Colors
owo-colors = "4"

# Progress / spinners (boot indicator, long-running commands)
indicatif = "0.17"

# TTY detection
atty = "0.2"

# Async streams
async-trait = "0.1"
tokio-stream = { version = "0.1", features = ["sync"] }
pin-project-lite = "0.2"

# WebSocket client
tokio-tungstenite = "0.26"

# gRPC stack for in-VM IPC (pearl th-893801). Pinned to current
# stable versions; tonic-build runs in each gRPC-serving crate's
# build.rs to codegen from proto/.
tonic = "0.12"
tonic-build = "0.12"
prost = "0.13"
prost-types = "0.13"

# Microsandbox — hardware-isolated microVM runtime for Smooth Operators.
# Used directly via the Rust SDK so we do not need the external `msb` CLI.
#
# 0.4.6 (pearl th-9f04c2): brings PR #673 (bounded relay handshake reads
# + boot-error.json on timeout) so failed boots surface a structured
# error instead of the opaque "sandbox process exited before sending
# startup info" we saw on the 0.4.5 attempt; PR #650 (exec.log capture
# + typed ExecFailed); PR #697 (SIGKILL on replace-grace overruns,
# relevant to the bind-mount silent drop tracked in th-dd0cef).
microsandbox = "0.4"

# Published agent engine (crates.io: smooai-smooth-operator-core).
# SMOODEV-1787 (PR 1/4, dual-engine collapse): smooth consumes the public
# `smooai-smooth-operator-core` engine instead of an in-tree copy. The in-tree
# `crates/smooth-operator` copy was deleted. The dep KEY stays `smooth-operator`
# and the lib is package-aliased back to `smooth_operator`, so the ~12 consumers'
# `use smooth_operator::…` imports for the GENERIC engine API keep working
# unchanged.
#
# SMOODEV-1790 (PR 4/4, final cutover): switched from the rev-pinned git dep on
# the OLD engine (rev bb9a256, which still carried the th-code harness) to the
# published crates.io release `0.14.0` — a clean GENERIC engine with the harness
# REMOVED. The harness bits the engine dropped (the coding workflow, skill
# discovery, and the fixer/oracle/chief/intent_classifier cast roles) now live
# in the smooth-owned `smooth-cast` crate below, built on the engine's generic
# public API.
smooth-operator = { version = "0.14.0", package = "smooai-smooth-operator-core" }
# smooth-owned coding-harness extensions to the generic engine (re-homed from
# the engine when it went generic at 0.14.0). See crates/smooth-cast.
smooth-cast = { version = "0.15.2", path = "crates/smooth-cast", package = "smooai-smooth-cast" }
smooth-bigsmooth = { version = "0.15.2", path = "crates/smooth-bigsmooth", package = "smooai-smooth-bigsmooth" }
smooth-policy = { path = "crates/smooth-policy", version = "0.15.2", package = "smooai-smooth-policy" }
smooth-web = { version = "0.15.2", path = "crates/smooth-web", package = "smooai-smooth-web" }
smooth-scribe = { version = "0.15.2", path = "crates/smooth-scribe", package = "smooai-smooth-scribe" }
smooth-wonk = { version = "0.15.2", path = "crates/smooth-wonk", package = "smooai-smooth-wonk" }
smooth-goalie = { version = "0.15.2", path = "crates/smooth-goalie", package = "smooai-smooth-goalie" }
smooth-narc = { version = "0.15.2", path = "crates/smooth-narc", package = "smooai-smooth-narc" }
smooth-archivist = { version = "0.15.2", path = "crates/smooth-archivist", package = "smooai-smooth-archivist" }
smooth-plugin = { version = "0.15.2", path = "crates/smooth-plugin", package = "smooai-smooth-plugin" }
smooth-code = { version = "0.15.2", path = "crates/smooth-code", package = "smooai-smooth-code" }
smooth-pearls = { path = "crates/smooth-pearls", version = "0.15.2", package = "smooai-smooth-pearls" }
smooth-diver = { version = "0.15.2", path = "crates/smooth-diver", package = "smooai-smooth-diver" }
smooth-bootstrap-bill = { version = "0.15.2", path = "crates/smooth-bootstrap-bill", default-features = false, package = "smooai-smooth-bootstrap-bill" }
smooth-tunnel = { version = "0.15.2", path = "crates/smooth-tunnel", package = "smooai-smooth-tunnel" }
smooth-host-stub = { version = "0.15.2", path = "crates/smooth-host-stub", package = "smooai-smooth-host-stub" }
smooth-bench = { version = "0.15.2", path = "crates/smooth-bench", package = "smooai-smooth-bench" }
smooth-api-client = { version = "0.15.2", path = "crates/smooth-api-client", package = "smooai-smooth-api-client" }
# Cross-runtime client shared library (github.com/SmooAI/client-shared).
# SMOODEV-1464: switched from a local `path = "../client-shared/rust"` dep to
# a rev-pinned git dep. The path form only resolved on a dev laptop, so every
# CI release since v0.13.7 failed at `cargo metadata` ("failed to load manifest
# for workspace member crates/smooth-cli") — surfaced misleadingly as the
# "Format check" step. Rev-pinned (not branch) for reproducible release builds;
# bump the rev when client-shared changes.
# Pearls: th-33d57b (scaffolded), th-0398c1 (auth module),
# th-abc4e2 (wires `th admin login`).
smooai-client-shared = { git = "https://github.com/SmooAI/client-shared.git", rev = "7309040afe15e20e7439cb9201cceed826cd2347", features = ["auth"] }
