[package]
name = "smooai-smooth-archivist"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Smooth Archivist — Central log aggregator"
readme = "README.md"

[lib]
name = "smooth_archivist"

[dependencies]
tokio.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
uuid.workspace = true
futures-util.workspace = true
smooth-scribe.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tower = { workspace = true }
http-body-util.workspace = true
hyper.workspace = true

[lints]
workspace = true
