[package]
name = "smooai-smooth-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Smooth benchmark harness — runs Aider Polyglot / SWE-bench / Terminal-Bench against the current routing config. Internal tool; not shipped in the `th` binary."

[[bin]]
name = "smooth-bench"
path = "src/main.rs"

[lib]
name = "smooth_bench"
path = "src/lib.rs"

[dependencies]
smooth-code.workspace = true
smooth-operator.workspace = true
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
dirs-next.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
