[package]
name = "smooth-bigsmooth"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Big Smooth — orchestrator, policy generation, sandbox management, API server"

[dependencies]
smooth-issues.workspace = true
smooth-operator = { path = "../smooth-operator" }
smooth-code = { path = "../smooth-code" }
smooth-narc = { path = "../smooth-narc" }
smooth-policy.workspace = true
smooth-web = { path = "../smooth-web" }
axum.workspace = true
axum-extra.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
globwalk.workspace = true
ignore.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
uuid.workspace = true
chrono.workspace = true
futures-core.workspace = true
futures-util.workspace = true
async-trait.workspace = true
anyhow.workspace = true
thiserror.workspace = true
dirs-next.workspace = true
toml.workspace = true

[dev-dependencies]
async-trait.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["test-util"] }
tower = { workspace = true, features = ["util"] }
hyper.workspace = true
http-body-util.workspace = true

[lints]
workspace = true
