[package]
name = "smooai-smooth-bigsmooth"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Big Smooth — orchestrator, policy generation, sandbox management, API server"

[lib]
name = "smooth_bigsmooth"

[features]
default = ["direct-sandbox"]
# Enables the in-process `DirectSandboxClient`, which links microsandbox
# transitively via `smooth-bootstrap-bill/server`. Required on the host
# (`th up` dev mode, integration tests that boot VMs directly). Disabled
# when cross-compiling the Boardroom binary for
# aarch64-unknown-linux-musl, because microsandbox's `msb_krun_devices`
# can't compile for musl/aarch64 (Linux VM ioctls absent from musl libc).
direct-sandbox = ["smooth-bootstrap-bill/server"]

[dependencies]
smooth-pearls.workspace = true
smooth-bootstrap-bill = { workspace = true, default-features = false }
smooth-operator = { path = "../smooth-operator", package = "smooai-smooth-operator" }
smooth-code = { path = "../smooth-code", package = "smooai-smooth-code" }
smooth-policy.workspace = true
smooth-web = { path = "../smooth-web", package = "smooai-smooth-web" }
# Boardroom cast — Big Smooth hosts these as tokio tasks when it boots
# inside a Boardroom VM (SMOOTH_BOARDROOM_MODE=1). They mirror the per-VM
# cast every Operator spawns inside its own pod.
smooth-wonk.workspace = true
smooth-goalie.workspace = true
smooth-narc.workspace = true
smooth-scribe.workspace = true
smooth-archivist.workspace = true
smooth-diver.workspace = true
axum = { workspace = true, features = ["ws"] }
axum-extra.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
globwalk.workspace = true
ignore.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
chrono.workspace = true
futures-core.workspace = true
futures-util.workspace = true
async-trait.workspace = true
anyhow.workspace = true
thiserror.workspace = true
dirs-next.workspace = true
toml.workspace = true
tokio-tungstenite.workspace = true
tempfile.workspace = true

[dev-dependencies]
async-trait.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["test-util"] }
tower = { workspace = true, features = ["util"] }
hyper.workspace = true
http-body-util.workspace = true
urlencoding.workspace = true

[lints]
workspace = true
