[package]
name = "smooai-smooth-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Smoo AI CLI — agent orchestration, config management, and platform tools"

[[bin]]
name = "th"
path = "src/main.rs"

[dependencies]
smooth-bench.workspace = true
smooth-bigsmooth.workspace = true
smooth-bootstrap-bill = { workspace = true, default-features = false, features = ["server"] }
smooth-code.workspace = true
smooth-diver.workspace = true
smooth-pearls.workspace = true
smooth-operator.workspace = true
smooth-tunnel.workspace = true
smooth-api-client.workspace = true
# Pearl th-abc4e2: `th admin login` uses the Supabase OAuth flow
# from client-shared. The `auth` feature pulls in the oauth + m2m +
# storage modules.
smooai-client-shared.workspace = true
smooth-web.workspace = true
url = "2"
axum.workspace = true
clap.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
reqwest = { workspace = true, features = ["blocking"] }
chrono.workspace = true
dirs-next.workspace = true
toml.workspace = true
owo-colors.workspace = true
indicatif.workspace = true
atty.workspace = true
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
futures-util.workspace = true
# SMOODEV-1164: th observability sourcemaps upload needs to walk a build dir
# and url-encode query params for the list endpoint.
walkdir = "2"
urlencoding = "2"
# Pretty tables for `th admin` default output (with --json opt-out).
# `tabled` is what nushell uses — best-of-class in the Rust table-
# rendering space. Builder API for dynamic JSON, rich modifier chain
# for theming, 10+ built-in styles.
tabled = "0.18"

[dev-dependencies]
tempfile = "3"
# Pearl th-abc4e2: admin::tests verify the baked-in Supabase anon
# key really IS the anon key (not service_role) by base64-decoding
# its JWT payload and checking the role claim.
base64 = "0.22"

[lints]
workspace = true
