[package]
name = "smooai-smooth-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Smoo AI CLI — agent orchestration, config management, and platform tools"

[[bin]]
name = "th"
path = "src/main.rs"

[dependencies]
# EPIC th-c89c2a: `th daemon …` is a passthrough launcher (src/daemon_launcher.rs)
# that spawns the standalone `smooth-daemon` binary; the bespoke :4400 microVM
# surface (smooth-bigsmooth / -bootstrap-bill / -tunnel + the smooth-bench
# harness) was deleted in the :4400 nuke.
smooth-code.workspace = true
smooth-diver.workspace = true
smooth-pearls.workspace = true
smooth-operator.workspace = true
# skills discovery + the smooth cast roles (re-homed from the engine at 0.14.0)
smooth-cast.workspace = true
smooth-api-client.workspace = true
# Pearl th-abc4e2: `th admin login` uses the Supabase OAuth flow
# from client-shared. The `auth` feature pulls in the oauth + m2m +
# storage modules.
smooai-client-shared.workspace = true
smooth-web.workspace = true
url = "2"
axum.workspace = true
clap.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
reqwest = { workspace = true, features = ["blocking"] }
chrono.workspace = true
dirs-next.workspace = true
toml.workspace = true
owo-colors.workspace = true
indicatif.workspace = true
atty.workspace = true
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
futures-util.workspace = true
# SMOODEV-1164: th observability sourcemaps upload needs to walk a build dir
# and url-encode query params for the list endpoint.
walkdir = "2"
urlencoding = "2"
# Pretty tables for `th admin` default output (with --json opt-out).
# `tabled` is what nushell uses — best-of-class in the Rust table-
# rendering space. Builder API for dynamic JSON, rich modifier chain
# for theming, 10+ built-in styles.
tabled = "0.18"

# Pearl th-fcb579: browser-based `th auth login`.
# - `tiny_http`: minimal blocking HTTP listener for the OAuth
#   localhost callback. One endpoint, no async — avoids pulling
#   axum/hyper into the binary just for this.
# - `open`: cross-platform "open this URL in the default browser".
# - `sha2`/`rand`: PKCE (RFC 7636) code_verifier + S256
#   code_challenge generation, plus the CSRF state token.
#   (`base64` is already listed below in dev-dependencies; we lift
#   it to a runtime dep for PKCE encoding.)
tiny_http = "0.12"
open = "5"
sha2 = "0.10"
rand = "0.8"
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
# Pearl th-abc4e2: admin::tests verify the baked-in Supabase anon
# key really IS the anon key (not service_role) by base64-decoding
# its JWT payload and checking the role claim. (Lifted to a
# runtime dep above by th-fcb579 — kept here as a comment for
# context.)

[lints]
workspace = true
